# crioGui2

./: CMakeLists.txt  clearProject.bat  crio-gui2.qrc  imdisk.qrc  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  scripts.qrc  ssh.bat  styles.qrc
ImDiskTk20231231/: files.cab  install.bat
scripts/: ramDisk.bat  ssh.bat
src/: QBaseAnalogReaderTestWidget.cpp  QBaseAnalogReaderTestWidget.h  QBetterHeaderView.cpp  QBetterHeaderView.h  QBetterSwitchButton.cpp  QBetterSwitchButton.h  QBetterTableWidget.cpp  QBetterTableWidget.h  QCrioModulesDataExtractor.cpp  QCrioModulesDataExtractor.h  QCrioViewWidget.cpp  QCrioViewWidget.h  QIniTreeWidget.cpp  QIniTreeWidget.h  QInputUnitCombobox.cpp  QInputUnitCombobox.h  QIpAddressEditor.cpp  QIpAddressEditor.h  QMappingRowWidget.cpp  QMappingRowWidget.h  QMappingViewerWidget.cpp  QMappingViewerWidget.h  QModbusAnalogChannelViewer.cpp  QModbusAnalogChannelViewer.h  QModbusAnalogViewer.cpp  QModbusAnalogViewer.h  QModbusCrioClient.cpp  QModbusCrioClient.h  QModbusSetupViewer.cpp  QModbusSetupViewer.h  QMultiLineTextVisualizer.cpp  QMultiLineTextVisualizer.h  QOScope.cpp  QOScope.h  QOutputUnitCombobox.cpp  QReadCurrentTestWidget.cpp  QReadCurrentTestWidget.h  QReadVoltageTestWidget.cpp  QReadVoltageTestWidget.h  QRectFWidget.cpp  (+19 more)
src/BasicWidgets/: QBetterSwitchButton.cpp  QBetterSwitchButton.h  QColorButton.cpp  QColorButton.h  QDonutGauge.cpp  QDonutGauge.h  QIniTreeWidget.cpp  QIniTreeWidget.h  QIpAddressEditor.cpp  QIpAddressEditor.h  QMultiLineTextVisualizer.cpp  QMultiLineTextVisualizer.h  QOutputUnitCombobox.cpp  QOutputUnitCombobox.h  QSizeFWidget.cpp  QSizeFWidget.h  QSizeWidget.cpp  QSizeWidget.h  QUnitDispatcher.cpp  QUnitDispatcher.h  QValueSearchBox.cpp  QValueSearchBox.h  QWaitWindow.cpp  QWaitWindow.h  qbettercalendar.cpp  qbettercalendar.h
src/Extractors/: QCrioModulesDataExtractor.cpp  QCrioModulesDataExtractor.h
src/Globals/: globalEnumSpace.h  globalStringHelper.h
src/Helpers/: iniObject.cpp  iniObject.h
src/NISpecifics/: NI9208.cpp  NI9208.h  NI9239.cpp  NI9239.h  NI9411.cpp  NI9411.h  NI9423.cpp  NI9423.h  NI9481.cpp  NI9481.h  NIDeviceModule.cpp  NIDeviceModule.h  NIDeviceModuleFactory.cpp  NIDeviceModuleFactory.h
src/NetWorking/: QModbusCrioClient.cpp  QModbusCrioClient.h  QSSHCommand.cpp  QSSHCommand.h  QTCPDebugClient.cpp  QtTcpClient.cpp  QtTcpClient.h
src/TabWidgetFundations/CrioDirectAccessTestWidgets/: QBaseAnalogReaderTestWidget.cpp  QBaseAnalogReaderTestWidget.h  QReadCurrentTestWidget.cpp  QReadCurrentTestWidget.h  QReadVoltageTestWidget.cpp  QReadVoltageTestWidget.h
src/TabWidgetFundations/CrioGeneralParameters/: QCrioBaseCpuWidget.cpp  QCrioBaseCpuWidget.h  QCrioDataDrillCpuWidget.cpp  QCrioDataDrillCpuWidget.h  QCrioHDDWidget.cpp  QCrioHDDWidget.h  QCrioTotalCpuWidget.cpp  QCrioTotalCpuWidget.h  QCrioTotalRamWidget.cpp  QCrioTotalRamWidget.h  QDataDrillHDDWidget.cpp  QDataDrillHDDWidget.h  QDataDrillRamWidget.cpp  QDataDrillRamWidget.h
src/TabWidgetFundations/ModbusMaping/: QBackUpWidget.cpp  QBackUpWidget.h  QMappingRowWidget.cpp  QMappingRowWidget.h
src/TabWidgetFundations/ModbusWidgets/: QModbusAnalogChannelViewer.cpp  QModbusAnalogChannelViewer.h  QModbusAnalogViewer.cpp  QModbusAnalogViewer.h
src/TabWidgetFundations/Modules/: QModulesIniListView.cpp  QModulesIniListView.h
src/TabWidgets/: QCrioViewWidget.cpp  QCrioViewWidget.h  QDeviceParametersWidget.cpp  QDeviceParametersWidget.h  QGlobalParametersWidget.cpp  QGlobalParametersWidget.h  QMappingViewerWidget.cpp  QMappingViewerWidget.h  QModbusSetupViewer.cpp  QModbusSetupViewer.h
src/securityHardening/: QRamDiskManager.cpp  QRamDiskManager.h  QSecureScreen.cpp  QSecureScreen.h
styles/: dark1.scss  darkAnalogViewer.scss  darkCalendar.scss  darkChannelsComboBoxes.scss  darkDonutGauge.scss  darkIniTreeWidget.scss  darkMappingRowWidget.scss  darkModbusChannelLE.scss  darkModulesComboBoxes.scss  darkScrollBar.scss  scrollArea.scss
